# lisudoku_solver

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
src/: lib.rs  solver.rs  types.rs
src/solver/: brute_solver.rs  checker.rs  intuitive_solver.rs  logical_solver.rs  rules.rs  tests.rs
src/solver/intuitive_solver/: candidates.rs  common_peer_elimination.rs  common_peer_elimination_kropki.rs  experiment.rs  hidden_set.rs  hidden_singles.rs  killer45.rs  killer_candidates.rs  kropki_chain_candidates.rs  locked_candidates.rs  naked_pairs.rs  naked_set.rs  naked_singles.rs  sum_candidates.rs  technique.rs  thermo_candidates.rs  thermo_steps.rs  x_wing.rs  xy_wing.rs
src/solver/logical_solver/: adhoc_naked_set.rs  advanced_candidates.rs  arrow_advanced_candidates.rs  arrow_candidates.rs  candidates.rs  combinations.rs  common_peer_elimination.rs  common_peer_elimination_arrow.rs  common_peer_elimination_kropki.rs  empty_reclanges.rs  hidden_set.rs  hidden_singles.rs  killer45.rs  killer_candidates.rs  kropki_advanced_candidates.rs  kropki_chain_candidates.rs  locked_candidates.rs  naked_set.rs  naked_singles.rs  nishio_forcing_chains.rs  palindrome_candidates.rs  palindrome_values.rs  phistomefel_ring.rs  renban_candidates.rs  sum_candidates.rs  technique.rs  thermo_candidates.rs  thermo_steps.rs  top_bottom_candidates.rs  turbot_fish.rs  x_wing.rs  xy_wing.rs
src/solver/rules/: experiment.rs  hidden_singles.rs  naked_singles.rs  obvious_singles.rs  thermo_steps.rs
src/solver/tests/: brute_solver.rs  checker.rs  intuitive_solver.rs  (+1 more)
(+185 files in other folders)
