[package]
name = "lisudoku-solver"
version = "0.1.13"
authors = ["George Marcus <george.marcus922@gmail.com>"]
description = "Solver for sudoku puzzles used by lisudoku"
license-file = "LICENSE"
repository = "https://github.com/lisudoku/lisudoku_solver"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.scripts]
build = "wasm-pack build --target bundler"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-utils = { version = "0.1", features = ["serde"] }
console_error_panic_hook = "0.1.7"
combinations = "0.1.0"
itertools = "0.10.5"
