[package]
name = "lisudoku-solver"
version = "0.1.30"
authors = ["George Marcus <george.marcus922@gmail.com>"]
description = "Solver for sudoku puzzles used by lisudoku"
license-file = "LICENSE"
repository = "https://github.com/lisudoku/lisudoku_solver"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.scripts]
build = "wasm-pack build --target bundler"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
combinations = "0.1.0"
itertools = "0.10.5"
serde_json = "1.0.93"
lz-str = "0.2.1"
tsify = "0.5.6"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
ntest = "0.9.3"
